@@ -20,6 +20,13 @@ repositories {
     mavenCentral()
 }
 
+// TestContainersの依存関係にあるcommons-compressが脆弱性警告を出すので、バージョンを強制的に更新
+configurations.configureEach {
+    resolutionStrategy {
+        force 'org.apache.commons:commons-compress:1.26.0'
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jooq'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -82,4 +89,5 @@ kotlin {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
